--- a/_data/data.yml
+++ b/_data/data.yml
@@ -15,7 +15,7 @@ sidebar:
   email: hello@maxghenis.com
   phone:
   citizenship:
-  website: maxghenis.com #do not add http://
+  website: maxghenis.github.io/online-cv #do not add http://
   linkedin: maxghenis
   xing:
   github: maxghenis
